--- a/app/app_templates/default.html
+++ b/app/app_templates/default.html
@@ -1,4 +1,4 @@
-{{render_template('header.html', style_css_str=style_css_str)}}
+{{render_template('header.html', title=title, style_css_str=style_css_str)}}
 <div class="container m-3 p-3">
     {{content}}
 </div>
