--- a/app/app_templates/default.html
+++ b/app/app_templates/default.html
@@ -1,5 +1,5 @@
-{{render_template('header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
 <div class="container m-3 p-3">
     {{content}}
 </div>
-{{render_template('footer.html')}}
+{{render_template('/app_templates/footer.html')}}
