--- a/app/app_templates/index2.html
+++ b/app/app_templates/index2.html
@@ -1,4 +1,4 @@
-{{render_template('header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
 <!--{{render_template('home.html')}}-->
  <h1>Success home</h1>
-{{render_template('footer.html')}}
+{{render_template('/app_templates/footer.html')}}
