--- a/app/app_templates/login.html
+++ b/app/app_templates/login.html
@@ -1,4 +1,4 @@
-{{render_template('header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
 
 <div class="container my-3 rounded">
     <div class="container bg-light">
