--- a/app/app_templates/about.html
+++ b/app/app_templates/about.html
@@ -5,4 +5,4 @@
 <p>This is some text about the page</p>
 </div>"
 
-{{render_template('/app_templates/footer.html')}}
+{{render_template('/app_templates/ file_pathfooter.html')}}
