--- a/app/app_templates/nav.html
+++ b/app/app_templates/nav.html
@@ -1,7 +1,7 @@
 
 <ul>
   <li><a href="/">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a href="/config_page">News</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
