--- a/app/app_templates/config_page.html
+++ b/app/app_templates/config_page.html
@@ -1,7 +1,7 @@
 {{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
 
 <form action="/config_page" method="POST" autocomplete="off" autocapitalize="none">
-    <label>Configs</label><br>
+    <label>{{page_info}}</label><br>
 
     {{config_page}}
 
