--- a/app/app_templates/config_page.html
+++ b/app/app_templates/config_page.html
@@ -1,6 +1,6 @@
 {{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
 
-<form action="/config_page" method="POST" autocomplete="off" autocapitalize="none">
+<form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">
     <label>{{page_info}}</label><br>
 
     {{config_page}}
