--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -1,16 +1,17 @@
 
 <ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/config_page">Configs</a></li>
+  <li><a class="active" href="/">Home</a></li>
+  <li><a href="/app_config">App settings</a></li>
   <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+    <a href="javascript:void(0)" class="dropbtn">Configs</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="/git_config">Git config</a>
+      <a href="/sys_config">Sys config</a>
+      <a href="/hw_config">HW config</a>
+      <a href="/wifi_ap_config">Wi-Fi config</a>
     </div>
   </li>
-  <li style="float:right"><a class="active" href="/about">About</a></li>
+  <li style="float:right"><a href="/about">About</a></li>
 </ul>
 
 <!--<h3>Dropdown Menu inside a Navigation Bar</h3>-->
