--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -9,6 +9,7 @@
       <a href="/sys_config">Sys config</a>
       <a href="/hw_config">HW config</a>
       <a href="/wifi_ap_config">Wi-Fi config</a>
+      <a href="/mqtt_config">MQTT config</a>
     </div>
   </li>
   <li style="float:right"><a href="/about">About</a></li>
