--- a/app/web_app/index2.html
+++ b/app/web_app/index2.html
@@ -1,3 +1,3 @@
 {{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
-{{render_template('/app_templates/home.html')}}
+<!--{{render_template('/app_templates/home.html')}}-->
 {{render_template('/app_templates/footer.html')}}
