--- a/app/web_app/login.html
+++ b/app/web_app/login.html
@@ -1,4 +1,4 @@
-{{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str)}}
 
 <div class="container my-3 rounded">
     <div class="container bg-light">
@@ -17,4 +17,4 @@
     </div>
 </div>
 
-{{render_template('footer.html')}}
+{{render_template('/web_app/footer.html')}}
