--- a/app/web_app/about.html
+++ b/app/web_app/about.html
@@ -1,8 +1,8 @@
-{{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str)}}
 
 <div class="container bg-light rounder m-3 p-3">
 <h1 class="display-5">This is an about page</h1>
 <p>This is some text about the page</p>
 </div>"
 
-{{render_template('/app_templates/ file_pathfooter.html')}}
+{{render_template('/web_app/ file_pathfooter.html')}}
