--- a/app/web_app/config_page.html
+++ b/app/web_app/config_page.html
@@ -1,4 +1,4 @@
-{{render_template('/app_templates/header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str)}}
 
 <form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">
     <label>{{page_info}}</label><br>
@@ -9,4 +9,4 @@
     <button id="saveBtn">Save config</button>
 <!--    <script src="data:text/javascript,document.getElementById('saveBtn').onclick = async function() { await fetch('/config_page'); };" defer></script>-->
 </form>
-{{render_template('footer.html')}}
+{{render_template('/web_app/footer.html')}}
