--- a/app/web_app/config_page.html
+++ b/app/web_app/config_page.html
@@ -1,12 +1,16 @@
 {{render_template('/web_app/header.html', title=title, style_css_str=style_css_str)}}
 
-<form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">
+<!--<form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">-->
+<form style="font-family:'Courier New'" method="POST" autocomplete="off" autocapitalize="none">
     <label>{{page_info}}</label><br>
 
     {{config_page}}
 
     <br><br>
     <button id="saveBtn">Save config</button>
-<!--    <script src="data:text/javascript,document.getElementById('saveBtn').onclick = async function() { await fetch('/config_page'); };" defer></script>-->
+<!--    <button id="rebootBtn">Reboot</button>-->
+<!--    <script src="data:text/javascript,document.getElementById('saveBtn').onclick = function() { window.location.href = '/config_page'; };" defer></script>-->
+<!--    <script src="data:text/javascript,document.getElementById('rebootBtn').onclick = function() { window.location.href = '/reboot'; };" defer></script>-->
+
 </form>
 {{render_template('/web_app/footer.html')}}
