--- a/app/web_app/home.html
+++ b/app/web_app/home.html
@@ -3,9 +3,9 @@
     <p>The Battery SOC: <span id="tempValue"></span>%.</p>
     <br/>
     <button id="toggleBtn">Toggle LED</button>
-    <button id="resetBtn">Reset Wifi</button>
-    <button id="rebootBtn">Reboot</button>
+<!--    <button id="resetBtn">Reset Wifi</button>-->
+<!--    <button id="rebootBtn">Reboot</button>-->
     <script src="data:text/javascript,document.getElementById('toggleBtn').onclick = async function() { await fetch('/toggle'); };" defer></script>
-    <script src="data:text/javascript,document.getElementById('resetBtn').onclick = function() { window.location.href = '/reset'; };" defer></script>
-    <script src="data:text/javascript,document.getElementById('rebootBtn').onclick = function() { window.location.href = '/reboot'; };" defer></script>
+<!--    <script src="data:text/javascript,document.getElementById('resetBtn').onclick = function() { window.location.href = '/reset'; };" defer></script>-->
+<!--    <script src="data:text/javascript,document.getElementById('rebootBtn').onclick = function() { window.location.href = '/reboot'; };" defer></script>-->
     <script src="data:text/javascript,async function getTemp() { const elem = document.getElementById('tempValue'); elem.innerHTML = 'Updating...'; const t = await fetch('/temperature'); const tVal = await t.text(); elem.innerHTML = tVal; setTimeout(getTemp, 10000)}; getTemp();" defer></script>
