--- a/app/web_app/header.html
+++ b/app/web_app/header.html
@@ -10,4 +10,4 @@
     <title>{{title}}</title>
 </head>
 <body>
-{{render_template('/web_app/nav.html')}}
+{{render_template('/web_app/nav.html' , config_page_links) }}
