--- a/app/web_app/index2.html
+++ b/app/web_app/index2.html
@@ -1,4 +1,4 @@
-{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str, config_page_links=config_page_links)}}
 {{render_template('/web_app/home.html')}}
 {{render_template('/web_app/footer.html')}}
 
