--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -5,11 +5,14 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Configs</a>
     <div class="dropdown-content">
-      <a href="/git_config">Git config</a>
-      <a href="/sys_config">Sys config</a>
-      <a href="/hw_config">HW config</a>
-      <a href="/wifi_ap_config">Wi-Fi config</a>
-      <a href="/mqtt_config">MQTT config</a>
+
+      {{config_page_links}}
+
+<!--      <a href="/git_config">Git config</a>-->
+<!--      <a href="/sys_config">Sys config</a>-->
+<!--      <a href="/hw_config">HW config</a>-->
+<!--      <a href="/wifi_ap_config">Wi-Fi config</a>-->
+<!--      <a href="/mqtt_config">MQTT config</a>-->
     </div>
   </li>
   <li style="float:right"><a href="/about">About</a></li>
