--- a/app/web_app/config_page.html
+++ b/app/web_app/config_page.html
@@ -1,4 +1,4 @@
-{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str, config_page_links=config_page_links)}}
 
 <!--<form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">-->
 <form style="font-family:'Courier New'" method="POST" autocomplete="off" autocapitalize="none">
