--- a/app/web_app/default.html
+++ b/app/web_app/default.html
@@ -1,4 +1,4 @@
-{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str)}}
+{{render_template('/web_app/header.html', title=title, style_css_str=style_css_str, config_page_links=config_page_links)}}
 <div class="container m-3 p-3">
     {{content}}
 </div>
