--- a/app/web_app/header.html
+++ b/app/web_app/header.html
@@ -10,4 +10,5 @@
     <title>{{title}}</title>
 </head>
 <body>
-{{render_template('/web_app/nav.html' , {{config_page_links}}) }}
+{{render_template('/web_app/nav.html', config_page_links=config_page_links, replace_symbol=False,)}}
+
