--- a/app/web_app/home.html
+++ b/app/web_app/home.html
@@ -1,6 +1,7 @@
     <h1>Success</h1>
     <p>The Battery monitor is connected to the network!</p>
-    <h1>The Battery SOC: <span id="tempValue"></span>%.</h1>
+    <h1>The Battery SOC: <br>
+        <span id="tempValue"></span>%.</h1>
     <br/>
     <button id="toggleBtn">Toggle LED</button>
 <!--    <button id="resetBtn">Reset Wifi</button>-->
