--- a/app/web_app/config_page.html
+++ b/app/web_app/config_page.html
@@ -2,12 +2,9 @@
 
 <!--<form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">-->
 <form style="font-family:'Courier New'" method="POST" autocomplete="off" autocapitalize="none">
-    <label>{{page_info}}</label><br>
-
     {{config_page}}
-
     <br><br>
-    <button id="saveBtn">Save config</button>
+    <button id="saveBtn">Save config</button><label>  {{page_info}}</label><br>
 <!--    <button id="rebootBtn">Reboot</button>-->
 <!--    <script src="data:text/javascript,document.getElementById('saveBtn').onclick = function() { window.location.href = '/config_page'; };" defer></script>-->
 <!--    <script src="data:text/javascript,document.getElementById('rebootBtn').onclick = function() { window.location.href = '/reboot'; };" defer></script>-->
