--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -1,18 +1,11 @@
 
 <ul>
   <li><a class="active" href="/">Home</a></li>
-  <li><a href="/app_config">App settings</a></li>
+  <li><a href="/app_config_page">App settings</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Configs</a>
     <div class="dropdown-content">
-
       {{config_page_links}}
-
-<!--      <a href="/git_config">Git config</a>-->
-<!--      <a href="/sys_config">Sys config</a>-->
-<!--      <a href="/hw_config">HW config</a>-->
-<!--      <a href="/wifi_ap_config">Wi-Fi config</a>-->
-<!--      <a href="/mqtt_config">MQTT config</a>-->
     </div>
   </li>
   <li style="float:right"><a href="/about">About</a></li>
