--- a/app/web_app/app_config_page.html
+++ b/app/web_app/app_config_page.html
@@ -2,13 +2,11 @@
 
 <!--<form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">-->
 <form style="font-family:'Courier New'" action="/app_config_page" method="POST" autocomplete="off" autocapitalize="none">
-    <label>MODE      : </label>
-    <input list="MODE">
-    <datalist id="MODE">
-        <option value="AUTO" />
-        <option value="ALLWAYS ON" />
-        <option value="ALLWAYS OFF" />
-    </datalist>
+    <label>MODE      : </label><br>
+    <input type="radio" name="MODE" value="AUTO" id="AUTO"><label for="AUTO">&nbsp;AUTO         :</label><br>
+    <input type="radio" name="MODE" value="ALLWAYS_ON" id="ALLWAYS_ON"><label for="ALLWAYS_ON">&nbsp;ALLWAYS_ON         :</label><br>
+    <input type="radio" name="MODE" value="ALLWAYS_OFF" id="ALLWAYS_OFF"><label for="ALLWAYS_OFF">&nbsp;ALLWAYS_OFF         :</label><br>
+    <br>
     {{mode}}
     <label for="ON_LEVEL">&nbsp;ON_LEVEL    : </label>
     <input type="number" id="ON_LEVEL" name="ON_LEVEL" value={{val_on}}><br>
