--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -8,6 +8,13 @@
       {{config_page_links}}
     </div>
   </li>
+   <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">System</a>
+    <div class="dropdown-content">
+      <a href="/log_viewer">LOG VIEWER</a>
+      <a href="/reboot">REBOOT SYSTEM</a>
+    </div>
+  </li>
   <li style="float:right"><a href="/about">About</a></li>
 </ul>
 
