--- a/app/web_app/log_viewer.html
+++ b/app/web_app/log_viewer.html
@@ -4,7 +4,7 @@
 <script src="data:text/javascript,document.getElementById('deleteLogBtn').onclick = async function() { await fetch('/delete_log'); };" defer></script>
 <div class="container bg-light rounder m-3 p-3">
 <h1 class="display-5">This is log.txt </h1>
-<p>{{log_txt}}</p>
+{{log_txt}}
 </div>"
 
 {{render_template('/web_app/footer.html')}}
