--- a/app/web_app/app_config_page.html
+++ b/app/web_app/app_config_page.html
@@ -3,7 +3,7 @@
 <!--<form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">-->
 <form style="font-family:'Courier New'" action="/app_config_page" method="POST" autocomplete="off" autocapitalize="none">
     <label>Selected MODE is   {{mode}} : </label><br>
-    <input type="radio" name="MODE" value="AUTO" id="AUTO"><label for="AUTO">&nbsp;AUTO</label><br>
+    <input type="radio" name="MODE" value="AUTO" id="AUTO" checked><label for="AUTO">&nbsp;AUTO</label><br>
     <input type="radio" name="MODE" value="ALLWAYS_ON" id="ALLWAYS_ON"><label for="ALLWAYS_ON">&nbsp;ALLWAYS_ON</label><br>
     <input type="radio" name="MODE" value="ALLWAYS_OFF" id="ALLWAYS_OFF"><label for="ALLWAYS_OFF">&nbsp;ALLWAYS_OFF</label><br>
     <br>
