--- a/app/web_app/app_config_page.html
+++ b/app/web_app/app_config_page.html
@@ -2,10 +2,8 @@
 
 <!--<form style="font-family:'Courier New'" action="/config_page" method="POST" autocomplete="off" autocapitalize="none">-->
 <form style="font-family:'Courier New'" action="/app_config_page" method="POST" autocomplete="off" autocapitalize="none">
-    <label>Selected MODE is   {{mode}} : </label><br>
-    <input type="radio" name="MODE" value="AUTO" id="AUTO" checked><label for="AUTO">&nbsp;AUTO</label><br>
-    <input type="radio" name="MODE" value="ALLWAYS_ON" id="ALLWAYS_ON"><label for="ALLWAYS_ON">&nbsp;ALLWAYS_ON</label><br>
-    <input type="radio" name="MODE" value="ALLWAYS_OFF" id="ALLWAYS_OFF"><label for="ALLWAYS_OFF">&nbsp;ALLWAYS_OFF</label><br>
+    <label>Selected MODE  : </label><br>
+     {{mode_str}}
     <br>
     <label  for="ON_LEVEL">&nbsp;ON_LEVEL......: </label>
     <input type="number" id="ON_LEVEL" name="ON_LEVEL" value={{val_on}}><br>
