--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -1,6 +1,7 @@
 
 <ul>
-  <li><a class="active" href="/">Home</a></li>
+<!--  <li><a class="active" href="/">Home</a></li>-->
+  <li><a href="/">Home</a></li>
   <li><a href="/app_config_page">App settings</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Configs</a>
@@ -15,7 +16,7 @@
       <a href="/reboot">REBOOT SYSTEM</a>
     </div>
   </li>
-  <li style="float:right"><a href="/about">About</a></li>
+  <li style="float:right"><a class="active" href="/about">About</a></li>
 </ul>
 
 <!--<h3>Dropdown Menu inside a Navigation Bar</h3>-->
