--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -16,7 +16,7 @@
       <a href="/reboot">REBOOT SYSTEM</a>
     </div>
   </li>
-  <li style="float:right"><a class="active" href="/about">About</a></li>
+  <li style="float:right"><a href="/about">About</a></li>
 </ul>
 
 <!--<h3>Dropdown Menu inside a Navigation Bar</h3>-->
