--- a/app/web_app/login.html
+++ b/app/web_app/login.html
@@ -4,12 +4,12 @@
     <div class="container bg-light">
         <form method="POST">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Username</label>
+                <label for="username" class="form-label">user</label>
                 <input type="text" name="username" class="form-control" id="username"/>
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                <div id="usernameHelp" class="form-text">We'll never share your username with anyone else.</div>
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <label for="password" class="form-label">password</label>
                 <input type="password" name="password" class="form-control"/>
             </div>
             <button type="submit" value="Login">Submit</button>
