--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -17,6 +17,7 @@
     </div>
   </li>
   <li style="float:right"><a href="/about">About</a></li>
+  <li style="float:right"><a href="/login">About</a></li>
 </ul>
 
 <!--<h3>Dropdown Menu inside a Navigation Bar</h3>-->
