--- a/app/web_app/nav.html
+++ b/app/web_app/nav.html
@@ -16,7 +16,7 @@
       <a href="/reboot">REBOOT SYSTEM</a>
     </div>
   </li>
-  <li style="float:right"><a href="/about">About</a></li>
+  <li style="float:right"><a href="/about">Login</a></li>
   <li style="float:right"><a href="/login">About</a></li>
 </ul>
 
