--- a/app/web_app/login.html
+++ b/app/web_app/login.html
@@ -3,16 +3,11 @@
 <div class="container my-3 rounded">
     <div class="container bg-light">
         <form method="POST">
-            <div class="mb-3">
-                <label for="username" class="form-label">user</label>
-                <input type="text" name="username" class="form-control" id="username"/>
-                <div id="usernameHelp" class="form-text">We'll never share your username with anyone else.</div>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">password</label>
-                <input type="password" name="password" class="form-control"/>
-            </div>
-            <button type="submit" value="Login">Submit</button>
+            <label for="username" class="form-label">user</label><br>
+            <input type="text" name="username" class="form-control" id="username" value="username"/>
+            <label for="password" class="form-label">password</label><br>
+            <input type="password" name="password" class="form-control"/>
+            <button type="submit" value="login">Submit</button>
         </form>
     </div>
 </div>
